--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>六道轮回录</title>
+    <link rel="stylesheet" href="css/style.css">
     <style>
         /* 新增动画效果 */
         @keyframes fadeIn {
