--- a/index.html
+++ b/index.html
@@ -51,6 +51,35 @@
             <div id="lifespan">120</div>
         </div>
     </div>
+    <div class="game-container">
+        <div class="status-panel">
+            <div>
+                <h3>因果线</h3>
+                <div class="karma-bar">
+                    <div class="karma-fill"></div>
+                </div>
+            </div>
+            <div>
+                <h3>境界</h3>
+                <p>炼气初期</p>
+            </div>
+            <div>
+                <h3>势力关系</h3>
+                <p>青云门（中立）</p>
+            </div>
+        </div>
+
+        <div class="main-content" id="game-text">
+            <p>【时空锚定】乙未年·霜降</p>
+            <p>【九嶷山脚】灵气波动异常...</p>
+        </div>
+
+        <div class="choices" id="choices">
+            <button onclick="selectChoice(1)">探查灵气异动</button>
+            <button onclick="selectChoice(2)">返回宗门</button>
+            <button onclick="selectChoice(3)">占卜吉凶</button>
+        </div>
+    </div>
 
     
 </body>
