--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
             </div>
         </div>
 
+        <div class="cultivation-panel">
+    <h3>修炼进度 <span id="cultivation-progress">0%</span></h3>
+    <div class="progress-bar">
+        <div class="progress-fill"></div>
+        
         <div class="main-content" id="game-text">
             <p>【时空锚定】乙未年·霜降</p>
             <p>【九嶷山脚】灵气波动异常...</p>
