--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
             </div>
         </div>
 
-        <div class="cultivation-panel">
+       <div class="cultivation-panel">
     <h3>修炼进度 <span id="cultivation-progress">0%</span></h3>
     <div class="progress-bar">
         <div class="progress-fill"></div>
+    </div>
+</div>
         
         <div class="main-content" id="game-text">
             <p>【时空锚定】乙未年·霜降</p>
