--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </style>
 </head>
 <body>
+    <script src="js/script.js"></script>
     <!-- 在status-panel后添加属性面板 -->
     <div class="attribute-panel">
         <div class="attribute-item">
